using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class SnailTrigger
{
    public static readonly string Start = "Start";
    public static readonly string Stop = "Stop";
    public static readonly string Select = "Select";
    public static readonly string Unselect = "Unselect";
    public static readonly string SelectOtherSnail = "SelectOtherSnail";
    public static readonly string Die = "Die";
    public static readonly string Dead = "Dead";
}
